--- a/hovering/index.html
+++ b/hovering/index.html
@@ -3,7 +3,7 @@
 <head>
  <title> Hover Camera  </title>
  <link rel="stylesheet" href="assets/main.css">
- <link rel="icon" href=" " type="image/x-icon" />
+ <link rel="icon" href="file:///Users/dhritigoyal/Desktop/interaction%20/DhritiGoyal_cif20/projects%20/hovering%20/1.png" type="image/x-icon" />
  </head> 
 
  <body>
@@ -34,7 +34,7 @@
 </div>
     <h5>Click on the image below to check out the photo quality</h5>
 <a  href="file:///Users/dhritigoyal/Desktop/interaction%20/DhritiGoyal_cif20/projects%20/hovering%20/Untitled_Artwork.gif">
-  <img src="file:///Users/dhritigoyal/Desktop/interaction%20/DhritiGoyal_cif20/projects%20/hovering%20/Screenshot%201942-09-08%20at%2010.09.17%20PM.png" alt="Camera" height="600px" class="image" class="w3-hover-sepia">
+  <img src="file:///Users/dhritigoyal/Desktop/interaction%20/DhritiGoyal_cif20/projects%20/hovering%20/Screenshot%201942-09-08%20at%2010.09.17%20PM.png" alt="Camera" height="600px" class="image">
 </a>
 
  </body>
